--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <ul class="menu" style="border-radius: 5px;">
                 <li><a href="https://quovadisyouthhub.org">About</a></li>
                 <li><a href="#services">services</a></li>
+                <li><a href="">services</a></li>
                 <li><a href="#">Available Jobs</a></li>
                 <li><a href="indexk.php">Career Guidance</a></li>
                 <li><a class="active" href="./login.php">Login</a></li>
