--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li><a href="#services">services</a></li>
                 <li><a href="">services</a></li>
                 <li><a href="#">Available Jobs</a></li>
-                <li><a href="indexk.php">Career Guidance</a></li>
+                <li><a href="#">Career Guidance</a></li>
                 <li><a class="active" href="./login.php">Login</a></li>
             </ul>
         </nav>
