--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li><a href="">services</a></li>
                 <li><a href="#">Available Jobs</a></li>
                 <li><a href="#">Career Guidance</a></li>
+                <li><a target="_blank" href="https://youthportal.tawk.help/">Help</a></li>
                 <li><a class="active" href="./login.php">Login</a></li>
             </ul>
         </nav>
