updated whole project

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         
         <nav>
             <a href="#" class="Logo">
+                
+                <style>
+                    @media(max-width:720px){
+                     .Logo img{
+                 height: 60px;
+                 width: 200px;
+                     }
+    }
+                </style>
                 <img src="images/LOGO.png" width="320px" />
             </a>
             <input class="menu-btn" type="checkbox" id="menu-btn"/>
